--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.jpa.show_sql=true
 
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/oasis
+spring.datasource.username=root
+spring.datasource.password=111111
+
+# ???? ??? ???? DDL ??
+spring.jpa.hibernate.ddl-auto=update
+# JPA ???? Hibernate? ????? ???? SQL? formating?? ??
+spring.jpa.properties.hibernate.format_sql=true 
