--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 src/main/resources/application.properties
-application-auth.properties
+src/main/resources/firebase/*
 
 ### STS ###
 .apt_generated
