--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,9 @@ dependencies {
 
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
+    // firebase sdk
+    implementation 'com.google.firebase:firebase-admin:7.1.0'
+
 }
 
 tasks.named('test') {
