--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     // firebase sdk
     implementation 'com.google.firebase:firebase-admin:7.1.0'
 
+    implementation 'org.springframework.boot:spring-boot-starter-batch'
 }
 
 tasks.named('test') {
